kubernetes/src/main/kubernetes/app.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: @project.artifactId@
spec:
  replicas: 1
  selector:
    matchLabels:
      app: @project.artifactId@
      tier: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: @project.artifactId@
        tier: web
    spec:
      containers:
        - image: @docker.image.prefix@/@project.artifactId@:@project.version@
          name: @project.artifactId@
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 200m
