kubernetes/src/main/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 8080
  selector:
    app: spring-boot-app
    tier: web
  type: LoadBalancer
