kubernetes/src/main/kubernetes/front-end.yaml
#apiVersion: autoscaling/v2alpha1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: front-end
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1beta1
#    kind: Deployment
#    name: front-end
#  minReplicas: 1
#  maxReplicas: 4
#  metrics:
#  - type: Resource
#    resource:
#      name: cpu
#      targetAverageUtilization: 75
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 80
  selector:
    app: front-end
    tier: web
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
      tier: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: front-end
        tier: web
    spec:
      containers:
        - image: @docker.image.prefix@/front-end:@project.version@
          name: front-end
          ports:
            - containerPort: 80
              name: web
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 200m
          readinessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 5
            periodSeconds: 3
