kubernetes/src/main/kubernetes/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
    tier: sql
spec:
  ports:
    - port: 3306
      name: mariadbsql
  selector:
    app: mariadb
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  serviceName: mariadb
  replicas: 2
  template:
    metadata:
      labels:
        app: mariadb
        tier: sql
    spec:
      containers:
        - image: @docker.image.prefix@/mariadb:@project.version@
          name: mariadb
          ports:
            - containerPort: 3306
              name: mysql
            - containerPort: 4444
              name: sst
            - containerPort: 4567
              name: replication
            - containerPort: 4568
              name: ist
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/mysql
            - name: db-config-storage
              mountPath: /etc/mysql/conf.d
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "mysql -u root -p${MYSQL_ROOT_PASSWORD} -e 'show databases;'"]
            initialDelaySeconds: 15
            timeoutSeconds: 45
          args: ["mysqld", "--wsrep-on"]
      volumes:
        - name: mariadb-conf-d
          configMap:
            name: mariadb-conf-d
  volumeClaimTemplates:
    - metadata:
        name: db-persistent-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: db-config-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Mi
