kubernetes/src/main/kubernetes/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
    tier: database
spec:
  ports:
    - port: 27017
      name: mongodb
  selector:
    app: mongodb
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb
  replicas: 3
  template:
    metadata:
      labels:
        app: mongodb
        tier: database
    spec:
      containers:
        - image: mongo:3.4
          name: mongodb
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data
          readinessProbe:
            exec:
              command: ["/bin/bash", "-c", "
                mongo -u ${MONGO_ADMIN_USERNAME} -p ${MONGO_ADMIN_PASSWORD} --authenticationDatabase ${MONGO_ADMIN_DATABASE} --quiet localhost/?replicaSet=${MONGO_RS} --eval \"rs.status().ok==1\" | grep -v NETWORK | grep true \n
              "]
            initialDelaySeconds: 60
            timeoutSeconds: 5
          args: ["--keyFile", "/data/mongo-key", "--replSet", "$(MONGO_RS)"]
        - image: @docker.image.prefix@/mongo-sidekick:@project.version@
          name: mongo-sidekick
      volumes:
        - name: mongodb-key
          secret:
            secretName: mongodb-secrets
            items:
              - key: mongodb-key
                path: key
                mode: 0600
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
