kubernetes/src/main/kubernetes/sql-application.yaml
#apiVersion: autoscaling/v2alpha1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: sql-application
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1beta1
#    kind: Deployment
#    name: sql-application
#  minReplicas: 1
#  maxReplicas: 4
#  metrics:
#  - type: Resource
#    resource:
#      name: cpu
#      targetAverageUtilization: 75
---
apiVersion: v1
kind: Service
metadata:
  name: sql-application
  labels:
    app: sql-application
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 80
  selector:
    app: sql-application
    tier: web
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sql-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-application
      tier: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: sql-application
        tier: web
    spec:
      containers:
        - image: @docker.image.prefix@/sql-application:@project.version@
          name: sql-application
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 200m
