kubernetes/src/main/kubernetes/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /mariadb
        backend:
          serviceName: sql-application
          servicePort: 80
      - path: /mongo
        backend:
          serviceName: mongo-application
          servicePort: 80
      - path: /cassandra
        backend:
          serviceName: cassandra-application
          servicePort: 80
